--- a/index.html
+++ b/index.html
@@ -3,32 +3,20 @@
 <html>
     <head>
         <title>Caramelldansen</title>
-
-        <style>
-            body {
-
-                cursor: wait;
-                align-content: center;
-                text-align: center;
-                padding: 100px
-            }
-
-            div#popUp {
-
-                text-align: center;
-                color: magenta;
-                text-shadow: 1px 1px 2px white, 0 0 25px magenta;
-                box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-                background-color: rgb(0, 0, 110);
-                border-radius: 25px;
-            }
-        </style>
+        <link rel="stylesheet" href="content/css/index.css">
     </head>
 
     <body id="theBody">
-        <h1>Choose Language: (Swedish or English)</h1>
-        <textarea id="chooseLanguage">Swedish</textarea>
-        <button onclick="languageReset()">Reset Language</button>
+        <!-- <button id="theme-button" onclick="changeTheme()">Light Theme</button> -->
+
+        <div>
+            <h1 id="chooseLanguage">Choose Language: (Swedish or English)</h1>
+            <p>Press 'Space' to pause the music.</p>
+        </div>
+        <select id="selectLanguage" onchange="languageReset()">
+            <option value="English">English</option>
+            <option value="Swedish" selected>Swedish</option>
+        </select>
 
         <video id="video" style="height: 100%; width: 100%; display: none;">
             <source src="song alt.mp4" type="video/mp4">
